welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:12: error: value - is not a member of java.awt.Color
for (h<- 0 to hau-1) { setCouleurBrosse(tab((h + dec) % hauteur)-1); baisseBrosse();leveBrosse();avance()}
                                                                ^